Fix missing colors for chat & room detail views.
To reproduce: open Internet Explorer (yeah, I know, it hurts).

Tested on latest version of IE, Firefox, and Chrome.

--- a/src/sass/pages/_room.scss
+++ b/src/sass/pages/_room.scss
@@ -160,6 +160,7 @@
 
         .line-color-preview {
             width: 12px;
+            height: 40px;
             position: absolute;
             left: 12px;
             top: 10px;
